My First Change

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
         <div class="row">
             <div class="col-lg-12 text-center v-center">
                 <h1><a href="/">StudyParty</a></h1>
-                <p class="lead">Place your location on the map</p>
+                <p class="lead">My first change</p>
                 <br>
                 <br>
                 <br>
