--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,32 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
+	<style> 
+		#contentContainer {
+			width: 500px;
+			height: 400px;
+			border: 5px black solid;
+			margin: 0 auto;
+			overflow: hidden;
+			background-color: #F2F2F2;
+			cursor: pointer;
+		}
+		#dot {
+			position: absolute;
+			left: 0px;
+			top: 0px;
+			z-index: 2;
+			transition: left .5s cubic-bezier(.42,-0.3,.78,1.25), 
+                top .5s cubic-bezier(.42,-0.3,.78,1.25);
+		}
+		#map{
+			position: absolute;
+			left: 0px;
+			top: 0px;
+			z-index: 1;
+		}
+		
+	</style>
 </head>
 
 <body>
@@ -23,6 +49,56 @@
             <div class="col-lg-12 text-center v-center">
                 <h1><a href="/">StudyParty</a></h1>
                 <p class="lead">Place your location on the map!</p>
+				
+				<div id="contentContainer" style="position: relative; left: 0; top: 0;">
+					<img id="dot" src="{{ url_for('static', filename='img/dot.svg') }}" width="10" height="10">
+					<img id="map" src="{{ url_for('static', filename='img/office.jpg') }}" width="500" height="400" alt="Planets" usemap="#planetmap">
+				</div>
+				
+				<script>
+					var theThing = document.querySelector("#dot");
+					var container = document.querySelector("#contentContainer");
+ 
+					container.addEventListener("click", getClickPosition, false);
+ 
+					function getClickPosition(e) {
+						var parentPosition = getPosition(e.currentTarget);
+						var xPosition = e.clientX - parentPosition.x - (theThing.clientWidth / 2);
+						var yPosition = e.clientY - parentPosition.y - (theThing.clientHeight / 2);
+     
+						theThing.style.left = xPosition + "px";
+						theThing.style.top = yPosition + "px";
+					}
+ 
+					function getPosition(el) {
+						var xPos = 0;
+						var yPos = 0;
+ 
+					while (el) {
+					if (el.tagName == "BODY") {
+					// deal with browser quirks with body/window/document and page scroll
+						var xScroll = el.scrollLeft || document.documentElement.scrollLeft;
+						var yScroll = el.scrollTop || document.documentElement.scrollTop;
+ 
+						xPos += (el.offsetLeft - xScroll + el.clientLeft);
+						yPos += (el.offsetTop - yScroll + el.clientTop);
+					} else {
+					// for all other non-BODY elements
+					xPos += (el.offsetLeft - el.scrollLeft + el.clientLeft);
+					yPos += (el.offsetTop - el.scrollTop + el.clientTop);
+					}
+ 
+					el = el.offsetParent;
+					}
+					return {
+						x: xPos,
+						y: yPos
+					};
+					}
+				</script>
+</body>
+</html>
+				</script>
                 <br>
                 <br>
                 <br>
@@ -38,7 +114,7 @@
                             <span class="input-group-btn"><button class="btn btn-lg btn-primary" type="submit">GO</button></span>
                         </div>
                     </div>
-                </form>
+                </form>		
             </div>
 
         </div>
