--- a/templates/index.html
+++ b/templates/index.html
@@ -68,6 +68,7 @@
      
 						theThing.style.left = xPosition + "px";
 						theThing.style.top = yPosition + "px";
+						window.location = "http://127.0.0.1:5000/map/" + xPosition + "/" + yPosition;
 					}
  
 					function getPosition(el) {
@@ -105,16 +106,16 @@
                 <form class="col-lg-12" action="{{url_for('prereg')}}" method="POST">
                     <div class="input-group" style="width:340px;text-align:center;margin:0 auto;">
                         <div class = "row">
-                            <input class="form-control input-lg" title="Don't worry. We hate spam, and will not share your name with anyone." placeholder="Enter your name" type="name" name="name">
+                            <input class="form-control input-lg" title="Don't worry. We hate spam, and will not share your name with anyone." placeholder="X Position" type="name" name="name">
                         </div>
                         <div class = "row">
-                            <input class="form-control input-lg" title="Don't worry. We hate spam, and will not share your location with anyone." placeholder="Enter your location" type="location" name="location">
+                            <input class="form-control input-lg" title="Don't worry. We hate spam, and will not share your location with anyone." placeholder="Y Position" type="location" name="location">
                         </div>
                         <div class = "row">
                             <span class="input-group-btn"><button class="btn btn-lg btn-primary" type="submit">GO</button></span>
                         </div>
                     </div>
-                </form>		
+                </form>	
             </div>
 
         </div>
