--- a/templates/mapclick.html
+++ b/templates/mapclick.html
@@ -24,17 +24,15 @@
 			background-color: #F2F2F2;
 			cursor: pointer;
 		}
+		#dot {
+			position: absolute;
+			z-index: 2;
+		}
 		#map{
 			position: absolute;
 			left: 0px;
 			top: 0px;
 			z-index: 1;
-		}
-		#dot {
-			position: relative;
-			left: 50px;
-			top: 50px;
-			z-index: 2;
 		}
 	</style>
 </head>
@@ -45,14 +43,29 @@
             <div class="col-lg-12 text-center v-center">
                 <h1><a href="/">StudyParty</a></h1>
                 <p class="lead">Place your location on the map</p>
-                <br>
-                <br>
-                <br>
 				
 				<div id="contentContainer" style="position: relative; left: 0; top: 0;">
 					<img id="dot" src="{{ url_for('static', filename='img/dot.svg') }}" width="10" height="10">
 					<img id="map" src="{{ url_for('static', filename='img/office.jpg') }}" width="500" height="400" alt="Planets" usemap="#planetmap">
+					<script>
+						var s = document.querySelector("#dot");
+						var container = document.querySelector("#contentContainer");
+						
+						function dotPosition(){
+							s.style.position = "absolute";
+							var x = {{name}}, y = {{location}};
+							s.style.left = x + "px";
+							s.style.top = y + "px";
+						}
+						
+						window.onload = dotPosition;
+					</script>
 				</div>
+				
+				<div class="input-group" style="width:340px;text-align:center;margin:0 auto;">
+                        <h3>X Position: {{name}}</h3>
+                        <h3>Y Position: {{location}}</h3>
+                </div>
             </div>
 
         </div>
