--- a/templates/index.html
+++ b/templates/index.html
@@ -17,8 +17,8 @@
 
 	<style> 
 		#contentContainer {
-			width: 500px;
-			height: 400px;
+			width: 1280px;
+			height: 1024px;
 			border: 5px black solid;
 			margin: 0 auto;
 			overflow: hidden;
@@ -52,78 +52,26 @@
 				
 				<div id="contentContainer" style="position: relative; left: 0; top: 0;">
 					<img id="dot" src="{{ url_for('static', filename='img/dot.svg') }}" width="10" height="10">
-					<img id="map" src="{{ url_for('static', filename='img/office.jpg') }}" width="500" height="400" alt="Planets" usemap="#planetmap">
+					<img id="map" src="{{ url_for('static', filename='img/disneymap.jpg') }}" width="1280" height="1024" alt="Planets" usemap="#planetmap">
 				</div>
-				
-				<script>
-					var theThing = document.querySelector("#dot");
-					var container = document.querySelector("#contentContainer");
- 
-					container.addEventListener("click", getClickPosition, false);
- 
-					function getClickPosition(e) {
-						var parentPosition = getPosition(e.currentTarget);
-						var xPosition = e.clientX - parentPosition.x - (theThing.clientWidth / 2);
-						var yPosition = e.clientY - parentPosition.y - (theThing.clientHeight / 2);
-     
-						theThing.style.left = xPosition + "px";
-						theThing.style.top = yPosition + "px";
-					}
- 
-					function getPosition(el) {
-						var xPos = 0;
-						var yPos = 0;
- 
-					while (el) {
-					if (el.tagName == "BODY") {
-					// deal with browser quirks with body/window/document and page scroll
-						var xScroll = el.scrollLeft || document.documentElement.scrollLeft;
-						var yScroll = el.scrollTop || document.documentElement.scrollTop;
- 
-						xPos += (el.offsetLeft - xScroll + el.clientLeft);
-						yPos += (el.offsetTop - yScroll + el.clientTop);
-					} else {
-					// for all other non-BODY elements
-					xPos += (el.offsetLeft - el.scrollLeft + el.clientLeft);
-					yPos += (el.offsetTop - el.scrollTop + el.clientTop);
-					}
- 
-					el = el.offsetParent;
-					}
-					return {
-						x: xPos,
-						y: yPos
-					};
-					}
-				</script>
+				 <script src="{{ url_for('static', filename='js/map.js') }}"></script> 
 </body>
 </html>
 				</script>
                 <br>
                 <br>
                 <br>
-                <form class="col-lg-12" action="{{url_for('prereg')}}" method="POST">
+                <form name="generateLink" class="col-lg-12" action="{{url_for('prereg')}}" method="POST">
                     <div class="input-group" style="width:340px;text-align:center;margin:0 auto;">
-                        <div class = "row">
-							
-                            <input type="hidden" name="name" id="name_label">
+                        <div class = "row">	
+                            <input type="hidden" name="leftPixel" id="left_label">
 						</div>
-                        <div class = "row">
-							
-                            <input type="hidden" name="location" id="location_label">
+                        <div class = "row">	
+                            <input type="hidden" name="topPixel" id="top_label">
 						</div>
-						
-						<script>
-							var dotVar = document.querySelector("#dot");
-							var container = document.querySelector("#contentContainer");
-							container.addEventListener("click", updateLocation);
-							function updateLocation(){
-								document.getElementById('location_label').value = dotVar.style.top.replace("px", "");
-								document.getElementById('name_label').value = dotVar.style.left.replace("px", "");
-							}
-						</script>
+						<script src="{{ url_for('static', filename='js/map_dot_update.js') }}"></script> 
                         <div class = "row">
-                            <span class="input-group-btn"><button class="btn btn-lg btn-primary" type="submit">GO</button></span>
+                            <span class="input-group-btn"><button class="btn btn-lg btn-primary" type="submit">Generate Link</button></span>
                         </div>
                     </div>
                 </form>	
