--- a/templates/mapclick.html
+++ b/templates/mapclick.html
@@ -16,8 +16,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<style> 
 		#contentContainer {
-			width: 500px;
-			height: 400px;
+			width: 1280px;
+			height: 1024px;
 			border: 5px black solid;
 			margin: 0 auto;
 			overflow: hidden;
@@ -42,11 +42,11 @@
         <div class="row">
             <div class="col-lg-12 text-center v-center">
                 <h1><a href="/">StudyParty</a></h1>
-                <p class="lead">Place your location on the map</p>
 				
 				<div id="contentContainer" style="position: relative; left: 0; top: 0;">
 					<img id="dot" src="{{ url_for('static', filename='img/dot.svg') }}" width="10" height="10">
-					<img id="map" src="{{ url_for('static', filename='img/office.jpg') }}" width="500" height="400" alt="Planets" usemap="#planetmap">
+					<img id="map" src="{{ url_for('static', filename='img/disneymap.jpg') }}" width="1280" height="1024" alt="Planets" usemap="#planetmap">
+					<script src="{{ url_for('static', filename='js/dot_position_load.js') }}"></script> 
 					<script>
 						var s = document.querySelector("#dot");
 						var container = document.querySelector("#contentContainer");
