--- a/templates/mapclick.html
+++ b/templates/mapclick.html
@@ -53,7 +53,7 @@
 						
 						function dotPosition(){
 							s.style.position = "absolute";
-							var x = {{name}}, y = {{location}};
+							var x = {{x_coordinate}}, y = {{y_coordinate}};
 							s.style.left = x + "px";
 							s.style.top = y + "px";
 						}
@@ -63,8 +63,8 @@
 				</div>
 				
 				<div class="input-group" style="width:340px;text-align:center;margin:0 auto;">
-                        <h3>X Position: {{name}}</h3>
-                        <h3>Y Position: {{location}}</h3>
+                        <h3>X Position: {{x_coordinate}}</h3>
+                        <h3>Y Position: {{y_coordinate}}</h3>
                 </div>
             </div>
 
