--- a/templates/mobile/demo.html
+++ b/templates/mobile/demo.html
@@ -148,7 +148,7 @@
 			<use href="#ct" width="20" height="20" x="406.9" y="174" transform="translate(-10,-10)"/>
 			<use href="#ct" width="20" height="20" x="435.7" y="150" transform="translate(-10,-10)"/>
 		</svg>
-		<div id="pin"></div>
+		<div id="pin" class="layer"></div>
 	</div>
 	<svg id="left-top" class="corner-border" viewbox="0 0 24.5 24.5" preserveAspectRatio="xMinYMin meet">
 		<use x="0" y="0" width="100" height="100" href="#cb"/>
