Upload your own map feature added

--- a/templates/building/fac.html
+++ b/templates/building/fac.html
@@ -211,6 +211,9 @@
             <div class = "row">	
                 <input type="hidden" name="topPixel" id="top_label">
 			</div>
+			<div class = "row">	
+                <input type="hidden" name="Building" value="FAC">
+			</div>
             <div class = "row">
                 <span class="input-group-btn"><button class="btn btn-lg btn-primary" type="submit">Generate Link</button></span>
             </div>
