3rd piece of furniture (glass divider) complete
also some refactoring of previous furniture

--- a/templates/mobile/furniture/divider.html
+++ b/templates/mobile/furniture/divider.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>box</title>
+  <title>pillar table</title>
   <link rel="stylesheet" type="text/css" href="furniture-styles.css">
 </head>
 <body>
   <div class='playground'>
-    <div class='hightable-dims padder'>
+    <div class='divider-dims padder'>
       <div class="spinner">
         <div class='furniture centerMe'>
-          <div class='box hightable-L'>
+          <div class='box divider-B'>
             <div class='face s1'>1</div>
             <div class='face s2'>2</div>
             <div class='face s3'>3</div>
@@ -17,23 +17,7 @@
             <div class='face s5'>5</div>
             <div class='face s6'>6</div>
           </div>
-          <div class='box hightable-R'>
-            <div class='face s1'>1</div>
-            <div class='face s2'>2</div>
-            <div class='face s3'>3</div>
-            <div class='face s4'>4</div>
-            <div class='face s5'>5</div>
-            <div class='face s6'>6</div>
-          </div>
-          <div class='box hightable-T'>
-            <div class='face s1'>1</div>
-            <div class='face s2'>2</div>
-            <div class='face s3'>3</div>
-            <div class='face s4'>4</div>
-            <div class='face s5'>5</div>
-            <div class='face s6'>6</div>
-          </div>
-          <div class='box hightable-U'>
+          <div class='box divider-G'>
             <div class='face s1'>1</div>
             <div class='face s2'>2</div>
             <div class='face s3'>3</div>
@@ -50,7 +34,7 @@
 
   <script>
     var pg= document.querySelector('.playground');
-    pg.scrollTop= (pg.scrollHeight-pg.clientHeight)/2-pg.clientHeight/6;
+    pg.scrollTop= (pg.scrollHeight-pg.clientHeight)/2-pg.clientHeight/2;
     pg.scrollLeft= (pg.scrollWidth-pg.clientWidth)/2;
   </script>
 
