--- a/templates/mobile/furniture/pillar.html
+++ b/templates/mobile/furniture/pillar.html
@@ -2,308 +2,7 @@
 <html>
 <head>
   <title>pillar table</title>
-  <!-- Playground -->
-  <style>
-    .playground {
-      height:100vh;
-      width:100vw;
-      background:rgba(0,0,0,.9);
-      border:2px solid green;
-      box-sizing: border-box;
-      position:absolute;
-      left:50%; top:50%;
-      transform: translate(-50%,-50%);
-      font-size: 0;
-      white-space: nowrap;
-      perspective:calc(1.5*240px); /* remember to change perspective (distance) when zoom in */
-      transform-style:preserve-3d;
-      overflow:scroll;
-    }
-
-    .playground::-webkit-scrollbar {
-      display:none;
-    }
-
-    .spinner:hover {
-      animation-play-state: running;
-    }
-
-    .spinner {
-      animation: spin 6s infinite linear;
-      animation-play-state: paused;
-      transform-style: preserve-3d;
-      /*border: 2px solid cyan;*/
-      transform-origin: 50% 50% calc(0.5*var(--H));
-    }
-
-    @keyframes spin {
-      from {transform: rotateY(0deg);}
-      to {transform: rotateY(360deg);}
-    }
-
-    .padder {
-      position: relative;
-      padding:75vh 75vw;
-      box-sizing: content-box;
-      border:3px solid yellow;
-      background:rgba(255,255,255,.4);
-      width:var(--W);
-      height:var(--L);
-    }
-
-    .centerMe {
-      position:absolute;
-      left:50%;top:50%;
-      /*transform:translate(-50%,-50%);*/
-    }
-  </style>
-  <!-- Furniture -->
-  <style>
-    .furniture {
-      transform-style: preserve-3d;
-
-      width:var(--W);
-      height:var(--L);
-
-      border:10px solid rgba(255,255,255,.5);
-      box-sizing: content-box;
-
-      transition: transform 1s;
-      transform: translate(-50%,-50%) rotateX(90deg) scale3d(var(--SCALE),var(--SCALE),var(--SCALE));
-      transform-origin: 50% 50% calc(0.5*var(--H));
-    }
-
-    /* look here for wood filter effect
-        https://www.smashingmagazine.com/2015/05/why-the-svg-filter-is-awesome/
-      */
-
-    .furniture:active {
-      transform: translate(-50%,-50%) rotateX(30deg) scale3d(var(--SCALE),var(--SCALE),var(--SCALE));
-    }
-  </style>
-  <!-- Pillar Table -->
-  <style>
-    .pillartable-dims {
-      --RES: 240px;
-      --SCALE: 1;
-      --W: calc(1.0*var(--RES));
-      --L: calc(1.0*var(--RES));
-      --H: calc(0.35*var(--RES));
-      --T: calc(0.03*var(--RES));
-      --G: calc(0.4*var(--RES));
-      --pH: calc(1.5*var(--RES));
-
-      /* Shared face dimensions */
-      --w: var(--W);
-      --l: calc(0.5*calc(var(--L) - var(--G)));
-      --h: var(--T);
-      --raise: calc(0.5*var(--h));
-      --w1: var(--G);
-      --b: calc(0.5*calc(var(--w) - var(--w1)));
-
-      /* Manually calculated */
-      --hyp: calc(0.70711*calc(var(--W) - var(--G)));
-      /* hyp = sqrt((L-G)^2/4+(W-G)^2/4) */
-      /* hyp = sqrt(2) * (W-G)/2 assuming symmetrical W-L */
-      --theta: 45deg;
-      /* theta = atan((W-G)/2 / ((L-G)/2)) */
-    }
-
-    .pillartable-F {
-      transform: translate3d(-50%,-50%,calc(var(--H) - var(--T))) translate(calc(0.5*var(--W)),calc(var(--L) - calc(0.5*var(--l))));
-    }
-
-    .pillartable-L {
-      transform: translate3d(-50%,-50%,calc(var(--H) - var(--T))) rotate(90deg) translate(calc(0.5*var(--L)),calc(-0.5*var(--l)));
-    }
-
-    .pillartable-B {
-      transform: translate3d(-50%,-50%,calc(var(--H) - var(--T))) rotate(180deg) translate(calc(-0.5*var(--W)),calc(-0.5*var(--l)));
-    }
-
-    .pillartable-R {
-      transform: translate3d(-50%,-50%,calc(var(--H) - var(--T))) rotate(-90deg) translate(calc(-0.5*var(--L)),calc(var(--W) + calc(-0.5*var(--l))));
-    }
-
-    .pillartable-P {
-      --w: var(--G);
-      --l: var(--G);
-      --h: var(--pH);
-      --raise: calc(0.5*var(--h));
-      transform: translate(-50%,-50%) translate(calc(0.5*var(--W)),calc((0.5*var(--L))));
-    }
-
-  </style>
-  <!-- High Table -->
-  <style>
-    .hightable-dims {
-      --RES: 240px;
-      --SCALE: 1;
-      --W: calc(1.0*var(--RES));
-      --L: calc(0.5*var(--RES));
-      --H: calc(0.625*var(--RES));
-      --T: calc(0.06*var(--RES));
-      --U: calc(0.15625*var(--RES));
-    }
-
-    .hightable-R {
-      --w: var(--T);
-      --l: var(--L);
-      --h: var(--H);
-      --raise: calc(0.5*var(--h));
-      transform: translate(calc(var(--W) - var(--T)),0);
-    }
-
-    .hightable-L {
-      --w: var(--T);
-      --l: var(--L);
-      --h: var(--H);
-      --raise: calc(0.5*var(--h));
-      transform: scale(-1,1);
-    }
-
-    .hightable-T {
-      --w: calc(var(--W) - calc(2*var(--T)));
-      --l: var(--L);
-      --h: var(--T);
-      --raise: calc(0.5*var(--h));
-      transform: translate3d(var(--T),0,calc(var(--H) - var(--T)));
-    }
-
-    .hightable-U {
-      --w: calc(var(--W) - calc(2*var(--T)));
-      --l: var(--T);
-      --h: var(--U);
-      --raise: calc(0.5*var(--h));
-      transform: translate(0,-50%) translate3d(var(--T),calc(0.5*var(--L)),calc(var(--H) - calc(var(--U) + var(--T))));
-    }
-  </style>
-  <!-- Box -->
-  <style>
-    .box {
-      width:var(--w);
-      height:var(--l);
-      transform-style: preserve-3d;
-      position: absolute;
-      left:0; top:0;
-
-      background:orange;
-    }
-    .face {
-      position:absolute;
-      transform-style: flat;
-      overflow:hidden;
-
-      color:white;
-      text-align:center;
-    }
-    .s1 {
-      width: var(--w);
-      height: var(--l);
-      transform: translateZ(var(--h));
-      background-color:rgba(10,110,205,.5);
-      font: calc(0.6*var(--l))/var(--l) sans-serif;
-    }
-    .s2 {
-      width: var(--l);
-      height: var(--h);
-      transform: translate3d(-50%,-50%,var(--raise)) rotateX(-90deg) rotateY(90deg) translate3d(calc(-0.5*var(--l)),0,var(--w));
-      background-color:rgba(120,215,20,.5);
-      font: calc(0.6*var(--h))/var(--h) sans-serif;
-    }
-    .s3 {
-      width: var(--w);
-      height: var(--h);
-      transform: translate3d(-50%,-50%,var(--raise)) rotateX(-90deg) translate3d(calc(0.5*var(--w)),0,var(--l));
-      background-color:rgba(225,30,130,.5);
-      font: calc(0.6*var(--h))/var(--h) sans-serif;
-    }
-    .s4 {
-      width: var(--l);
-      height: var(--h);
-      transform: translate3d(-50%,-50%,var(--raise)) rotateX(-90deg) rotateY(-90deg) translate3d(calc(0.5*var(--l)),0,0);
-      background-color:rgba(255,196,128,.5);
-      font: calc(0.6*var(--h))/var(--h) sans-serif;
-    }
-    .s5 {
-      width: var(--w);
-      height: var(--h);
-      transform: translate3d(-50%,-50%,var(--raise)) rotateX(-90deg) rotateY(180deg) translate3d(calc(-0.5*var(--w)),0,0);
-      background-color:rgba(50,245,150,.5);
-      font: calc(0.6*var(--h))/var(--h) sans-serif;
-    }
-    .s6 {
-      width: var(--w);
-      height: var(--l);
-      transform: rotateY(180deg);
-      background-color:rgba(255,160,60,.5);
-      font: calc(0.6*var(--l))/var(--l) sans-serif;
-    }
-  </style>
-  <!-- Trapezoid Box -->
-  <style>
-    .t-box {
-      width:var(--w);
-      height:var(--l);
-      transform-style: preserve-3d;
-      position: absolute;
-      left:0; top:0;
-    }
-    .t-face {
-      position:absolute;
-      transform-style: flat;
-
-      color:white;
-      text-align:center;
-    }
-    .t-s1 {
-      width: var(--w1);
-      height: 0;
-      border: var(--b) solid transparent;
-      border-top:none;
-      border-bottom: var(--l) solid rgba(10,110,205,.5);
-      transform: translateZ(var(--h));
-      font: calc(0.6*var(--l))/var(--l) sans-serif;
-    }
-    .t-s2 {
-      width: var(--hyp);
-      height: var(--h);
-      transform: translate3d(-50%,-50%,var(--raise)) rotateX(-90deg) rotateY(90deg) translate3d(calc(-0.5*var(--l)),0,calc(var(--w) - calc(0.5*var(--b)))) rotateY(var(--theta));
-      background-color:rgba(120,215,20,.5);
-      font: calc(0.6*var(--h))/var(--h) sans-serif;
-    }
-    .t-s3 {
-      width: var(--w);
-      height: var(--h);
-      transform: translate3d(-50%,-50%,var(--raise)) rotateX(-90deg) translate3d(calc(0.5*var(--w)),0,var(--l));
-      background-color:rgba(225,30,130,.5);
-      font: calc(0.6*var(--h))/var(--h) sans-serif;
-    }
-    .t-s4 {
-      width: var(--hyp);
-      height: var(--h);
-      transform: translate3d(-50%,-50%,var(--raise)) rotateX(-90deg) rotateY(-90deg) translate3d(calc(0.5*var(--l)),0,calc(-0.5*var(--b))) rotateY(calc(-1*var(--theta)));
-      background-color:rgba(255,196,128,.5);
-      font: calc(0.6*var(--h))/var(--h) sans-serif;
-    }
-    .t-s5 {
-      width: var(--w1);
-      height: var(--h);
-      transform: translate3d(-50%,-50%,var(--raise)) rotateX(-90deg) rotateY(180deg) translate3d(calc(-0.5*var(--w)),0,0);
-      background-color:rgba(50,245,150,.5);
-      font: calc(0.6*var(--h))/var(--h) sans-serif;
-    }
-    .t-s6 {
-      width: var(--w1);
-      height: 0;
-      border: var(--b) solid transparent;
-      border-top:none;
-      border-bottom: var(--l) solid rgba(255,160,60,.5);
-      transform: rotateY(180deg);
-      font: calc(0.6*var(--l))/var(--l) sans-serif;
-    }
-    </style>
-
+  <link rel="stylesheet" type="text/css" href="furniture-styles.css">
 </head>
 <body>
   <div class='playground'>
