Add menu functionality

--- a/templates/building/disney.html
+++ b/templates/building/disney.html
@@ -136,9 +136,15 @@
 <body>
 <div class="container-full">
     <div class="row">
-        <div class="col-lg-12 text-center v-center">
-			<h1><a href="/">StudyParty</a></h1>
-        </div>
+        <div class="dropdown">
+  			<button class="dropbtn">Buildings</button>
+  			<div class="dropdown-content">
+  				{%for item in buildings%}
+				    <a href="{{url_for('index', building = item)}}">{{item.replace('*','')}}</a>
+				{%endfor%}
+  			</div>
+		</div>
+		<button class="dropbtn" onclick="location.href='{{url_for('upload')}}'">Upload</button>
     </div>
 </div>
 <header>
