--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,4 +1,22 @@
-<h1><a href="{{url_for('home')}}">Home</a></h1>
+<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/demostyles.css') }}" async>
+<link href="https://fonts.googleapis.com/css?family=Lora|Nunito" rel="stylesheet" async>
+
+
+
+<body>
+<div class="container-full">
+    <div class="row">
+    	<div class="dropdown">
+  			<button class="dropbtn">Buildings</button>
+  			<div class="dropdown-content">
+  				{%for item in buildings%}
+				    <a href="{{url_for('index', building = item)}}">{{item.replace('*','')}}</a>
+				{%endfor%}
+  			</div>
+		</div>
+		<button class="dropbtn" onclick="location.href='{{url_for('upload')}}'">Upload</button>
+    </div>
+</div>
 
 <h1>Upload Map</h1>
 
@@ -10,3 +28,4 @@
                   <input type = "file" name = "files" class = "filebutton" id="files" multiple="" required>
                   <input type = "submit" style="border-style:none;" value = "Submit" />
 </form>
+</body>
