Fork Legged Table Complete
The same top and leg were used as in round rectangle table.
The fork leg is the only addition.
Some code (css) was refactored to be more extensible and organized using
SASS features.

--- a/templates/mobile/furniture/high.html
+++ b/templates/mobile/furniture/high.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>box</title>
+  <title>high table</title>
   <link rel="stylesheet" type="text/css" href="furniture-styles.css">
 </head>
 <body>
   <div class='playground'>
-    <div class='hightable-dims padder'>
+    <div class='hightable padder'>
       <div class="spinner">
         <div class='furniture centerMe'>
           <div class='box hightable-L'>
