--- a/templates/mobile/furniture/pillar.html
+++ b/templates/mobile/furniture/pillar.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div class='playground'>
-    <div class='pillartable-dims padder'>
+    <div class='pillartable padder'>
       <div class="spinner">
         <div class='furniture centerMe'>
           <div class='t-box pillartable-F'>
