--- a/templates/mobile/furniture/furniture-styles.css
+++ b/templates/mobile/furniture/furniture-styles.css
@@ -1,3 +1,4 @@
+/* Special mixin for wedge box */
 /* Playground */
 /* args: W,L,H */
 .playground {
@@ -12,7 +13,7 @@
   transform: translate(-50%, -50%);
   font-size: 0;
   white-space: nowrap;
-  perspective: calc(1.5*240px);
+  perspective: calc(2*240px);
   /* remember to change perspective (distance) when zoom in */
   transform-style: preserve-3d;
   overflow: scroll; }
@@ -69,7 +70,7 @@
   transform: translate(-50%, -50%) rotateX(30deg) scale3d(var(--SCALE), var(--SCALE), var(--SCALE)); }
 
 /* Round Rectangle Table */
-.r-rectangle-dims {
+.r-rectangle {
   --RES: 240px;
   --SCALE: 1;
   --W: 240px;
@@ -80,7 +81,6 @@
   --B_t: 12px;
   --B_d: 120px;
   --L_d: 12px; }
-
 .r-rectangle-B {
   /* shared box dimensions */
   /* dimensions passed to each box through CSS inheritance */
@@ -90,8 +90,7 @@
   --bW: 27px;
   --bL1: 12px;
   --bL2: 0px;
-  --sign1: 1;
-  --sign2: 1;
+  --sign: 1;
   --theta: 0.5236rad;
   --phi1: -0.25118rad;
   --phi2: 0rad;
@@ -110,43 +109,42 @@
   transform: translate(-50%, -50%);
   border-radius: 50%;
   background-color: rgba(0, 0, 0, 0.5);
-  /* positioning each box */ }
+  /* positioning each box */
+  /* implement border-type() mixin */ }
   .r-rectangle-B > *:nth-child(1) {
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%) rotate(0deg) rotateX(90deg) translateZ(-51.96152px); }
-
   .r-rectangle-B > *:nth-child(2) {
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%) rotate(60deg) rotateX(90deg) translateZ(-51.96152px); }
-
   .r-rectangle-B > *:nth-child(3) {
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%) rotate(120deg) rotateX(90deg) translateZ(-51.96152px); }
-
   .r-rectangle-B > *:nth-child(4) {
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%) rotate(180deg) rotateX(90deg) translateZ(-51.96152px); }
-
   .r-rectangle-B > *:nth-child(5) {
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%) rotate(240deg) rotateX(90deg) translateZ(-51.96152px); }
-
   .r-rectangle-B > *:nth-child(6) {
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%) rotate(300deg) rotateX(90deg) translateZ(-51.96152px); }
-
+  .r-rectangle-B .w-s2, .r-rectangle-B .w-s4 {
+    border-bottom: none;
+    --width: var(--b_width);
+    --true_w: var(--t_width); }
 .r-rectangle-L {
   /* shared box dimensions */
   /* dimensions passed to each box through CSS inheritance */
@@ -170,7 +168,6 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, 0) rotate(180deg); }
-
   .r-rectangle-L > *:nth-child(2) {
     position: absolute;
     left: 50%;
@@ -178,7 +175,6 @@
     transform: translate(-50%, 0); }
   .r-rectangle-L .t-face {
     overflow: hidden !important; }
-
 .r-rectangle-T {
   /* shared box dimensions */
   /* shared dimensions passed to each box through CSS inheritance */
@@ -200,7 +196,6 @@
     left: 0;
     top: 0;
     transform: translate(-50%, -50%) rotate(-90deg) translate(-60px, 6px); }
-
   .r-rectangle-T > *:nth-child(2) {
     --w: 216px;
     --l: 120px;
@@ -208,7 +203,6 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%); }
-
   .r-rectangle-T > *:nth-child(3) {
     --w: 120px;
     --l: 12px;
@@ -222,8 +216,145 @@
   .r-rectangle-T .t-face {
     overflow: hidden !important; }
 
+.fork-leg {
+  --RES: 240px;
+  --SCALE: 1;
+  --W: 240px;
+  --L: 240px;
+  --H: 120px;
+  --T_bW: 6px;
+  --T_t: 6px;
+  --B_t: 12px;
+  --B_d: 180px;
+  --L_d: 12px; }
+.fork-leg-B {
+  /* shared box dimensions */
+  /* dimensions passed to each box through CSS inheritance */
+  --w: 8.04px;
+  --l: 8.04px;
+  --h: 12px;
+  --bW: 2.01px;
+  --bL1: 2.01px;
+  --bL2: 2.01px;
+  --sign: -1;
+  --theta: 0.16596rad;
+  --phi1: 0.16596rad;
+  --phi2: 0.16596rad;
+  --hyp: 12.16717px;
+  --hyp1: 12.16717px;
+  --hyp2: 12.16717px;
+  --w1: 4.02px;
+  --l1: 4.02px;
+  /* global positioning */
+  transform-style: preserve-3d;
+  width: 180px;
+  height: 180px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%) rotate(45deg);
+  /* positioning each box */
+  /* implement border-type() mixin */
+  /* for debugging mode: clip text overflow */ }
+  .fork-leg-B > *:nth-child(1) {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate3d(-50%, -50%, 12px) rotateX(180deg) rotate(0deg) matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, -6.9975, 1, 0, 0, 0, 0, 1) translate(0, -4.02px); }
+  .fork-leg-B > *:nth-child(2) {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate3d(-50%, -50%, 12px) rotateX(180deg) rotate(90deg) matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, -6.9975, 1, 0, 0, 0, 0, 1) translate(0, -4.02px); }
+  .fork-leg-B > *:nth-child(3) {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate3d(-50%, -50%, 12px) rotateX(180deg) rotate(180deg) matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, -6.9975, 1, 0, 0, 0, 0, 1) translate(0, -4.02px); }
+  .fork-leg-B > *:nth-child(4) {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate3d(-50%, -50%, 12px) rotateX(180deg) rotate(270deg) matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, -6.9975, 1, 0, 0, 0, 0, 1) translate(0, -4.02px); }
+  .fork-leg-B .w-s2, .fork-leg-B .w-s4 {
+    border-top: none;
+    --width: var(--t_width);
+    --true_w: var(--b_width); }
+  .fork-leg-B .w-face {
+    overflow: hidden !important; }
+.fork-leg-L {
+  /* shared box dimensions */
+  /* dimensions passed to each box through CSS inheritance */
+  --w: 12px;
+  --l: 5.19615px;
+  --h: 102px;
+  --bW: 3px;
+  --hyp: 6px;
+  --theta: 0.5236rad;
+  /* global positioning */
+  transform-style: preserve-3d;
+  width: 12px;
+  height: 12px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate3d(-50%, -50%, 12px);
+  /* positioning each box */ }
+  .fork-leg-L > *:nth-child(1) {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, 0) rotate(180deg); }
+  .fork-leg-L > *:nth-child(2) {
+    position: absolute;
+    left: 50%;
+    top: 0;
+    transform: translate(-50%, 0); }
+  .fork-leg-L .t-face {
+    overflow: hidden !important; }
+.fork-leg-T {
+  /* shared box dimensions */
+  /* shared dimensions passed to each box through CSS inheritance */
+  --h: 6px;
+  /* global positioning */
+  transform-style: preserve-3d;
+  width: 240px;
+  height: 240px;
+  position: relative;
+  transform: translateZ(114px);
+  /* positioning each box */ }
+  .fork-leg-T > *:nth-child(1) {
+    --w: 240px;
+    --l: 6px;
+    --bW: 6px;
+    --hyp: 8.48528px;
+    --theta: 0.7854rad;
+    position: absolute;
+    left: 0;
+    top: 0;
+    transform: translate(-50%, -50%) rotate(-90deg) translate(-120px, 3px); }
+  .fork-leg-T > *:nth-child(2) {
+    --w: 228px;
+    --l: 240px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%); }
+  .fork-leg-T > *:nth-child(3) {
+    --w: 240px;
+    --l: 6px;
+    --bW: 6px;
+    --hyp: 8.48528px;
+    --theta: 0.7854rad;
+    position: absolute;
+    left: 0;
+    top: 0;
+    transform: translate(-50%, -50%) rotate(90deg) translate(120px, -237px); }
+  .fork-leg-T .t-face {
+    overflow: hidden !important; }
+
 /* Glass Divider */
-.divider-dims {
+.g-divider {
   --RES: 240px;
   --SCALE: 1;
   --W: calc(1.0*var(--RES));
@@ -232,14 +363,12 @@
   --bH: calc(1.5*var(--L));
   --P: calc(0.05*var(--RES));
   --T: calc(0.005*var(--RES)); }
-
-.divider-B {
+.g-divider-B {
   --w: var(--W);
   --l: var(--L);
   --h: var(--bH);
   --raise: calc(0.5*var(--h)); }
-
-.divider-G {
+.g-divider-G {
   --w: calc(var(--W) - calc(2*var(--P)));
   --l: var(--T);
   --h: calc(var(--H) - var(--bH));
@@ -247,7 +376,7 @@
   transform: translate3d(-50%, -50%, var(--bH)) translate(calc(0.5*var(--W)), calc(0.5*var(--L))); }
 
 /* Pillar Table */
-.pillartable-dims {
+.pillartable {
   --RES: 240px;
   --SCALE: 1;
   --W: calc(1.0*var(--RES));
@@ -267,19 +396,14 @@
   /* or hyp = sqrt(2) * (W-G)/2 assuming symmetrical W-L */
   --theta: 45deg;
   /* theta = atan((W-G)/2 / ((L-G)/2)) */ }
-
 .pillartable-F {
   transform: translate3d(-50%, -50%, calc(var(--H) - var(--T))) translate(calc(0.5*var(--W)), calc(var(--L) - calc(0.5*var(--l)))); }
-
 .pillartable-L {
   transform: translate3d(-50%, -50%, calc(var(--H) - var(--T))) rotate(90deg) translate(calc(0.5*var(--L)), calc(-0.5*var(--l))); }
-
 .pillartable-B {
   transform: translate3d(-50%, -50%, calc(var(--H) - var(--T))) rotate(180deg) translate(calc(-0.5*var(--W)), calc(-0.5*var(--l))); }
-
 .pillartable-R {
   transform: translate3d(-50%, -50%, calc(var(--H) - var(--T))) rotate(-90deg) translate(calc(-0.5*var(--L)), calc(var(--W) + calc(-0.5*var(--l)))); }
-
 .pillartable-P {
   --w: var(--G);
   --l: var(--G);
@@ -287,7 +411,7 @@
   transform: translate(-50%, -50%) translate(calc(0.5*var(--W)), calc((0.5*var(--L)))); }
 
 /* High Table */
-.hightable-dims {
+.hightable {
   --RES: 240px;
   --SCALE: 1;
   --W: calc(1.0*var(--RES));
@@ -295,25 +419,21 @@
   --H: calc(0.625*var(--RES));
   --T: calc(0.06*var(--RES));
   --U: calc(0.15625*var(--RES)); }
-
 .hightable-R {
   --w: var(--T);
   --l: var(--L);
   --h: var(--H);
   transform: translate(calc(var(--W) - var(--T)), 0); }
-
 .hightable-L {
   --w: var(--T);
   --l: var(--L);
   --h: var(--H);
   transform: scale(-1, 1); }
-
 .hightable-T {
   --w: calc(var(--W) - calc(2*var(--T)));
   --l: var(--L);
   --h: var(--T);
   transform: translate3d(var(--T), 0, calc(var(--H) - var(--T))); }
-
 .hightable-U {
   --w: calc(var(--W) - calc(2*var(--T)));
   --l: var(--T);
@@ -445,7 +565,9 @@
   font: calc(0.6*var(--l))/var(--l) sans-serif; }
 
 /* Wedge Box */
-/* args: w,l,h,bW,bL1,bL2,sign1,sign2,theta,phi1,phi2,hyp,hyp1,hyp2,w1,l1 */
+/* args: w,l,h,bW,bL1,bL2,sign,sign,theta,phi1,phi2,hyp,hyp1,hyp2,w1,l1
+   special: must implement the border-type() mixin (defaults to border-bottom). */
+/* [code-folding placeholder] */
 .w-box {
   --raise: calc(0.5*var(--h));
   width: var(--w);
@@ -461,20 +583,10 @@
   color: white;
   text-align: center; }
 
-.w-border-top {
-  border-bottom: none !important;
-  --width: var(--b_width);
-  --true_w: var(--t_width); }
-
-.w-border-bottom {
-  border-top: none !important;
-  --width: var(--t_width);
-  --true_w: var(--b_width); }
-
 .w-s1 {
   width: var(--w1);
   height: var(--l1);
-  transform: translate3d(-50%, 0, var(--h)) translate(calc(0.5*var(--w)), calc(-0.5*calc(var(--sign2)*var(--bL2))));
+  transform: translate3d(-50%, 0, var(--h)) translate(calc(0.5*var(--w)), calc(-0.5*calc(var(--sign)*var(--bL2))));
   background-color: rgba(50, 245, 150, 0.5);
   font: calc(0.6*var(--l1))/var(--l1) sans-serif; }
 
@@ -491,14 +603,13 @@
   overflow: hidden; }
 
 .w-s3 {
-  --t_width: var(--w1);
-  --b_width: var(--w);
-  width: var(--width);
+  width: var(--w1);
   height: 0;
   border: var(--hyp1) solid rgba(10, 110, 205, 0.5);
   border-right: var(--bW) solid transparent;
   border-left: var(--bW) solid transparent;
-  transform: translate3d(-50%, -50%, var(--raise)) translate(calc(0.5*var(--true_w)), calc(var(--l) + calc(var(--sign1)*calc(0.5*var(--bL1))))) rotateX(calc(-90deg + var(--phi1)));
+  border-top: none;
+  transform: translate3d(-50%, -50%, var(--raise)) translate(calc(0.5*var(--w)), calc(var(--l) + calc(var(--sign)*calc(0.5*var(--bL1))))) rotateX(calc(-90deg + var(--phi1)));
   font: calc(0.6*var(--h))/var(--h) sans-serif; }
 
 .w-s4 {
@@ -514,14 +625,13 @@
   overflow: hidden; }
 
 .w-s5 {
-  --t_width: var(--w1);
-  --b_width: var(--w);
-  width: var(--width);
+  width: var(--w1);
   height: 0;
   border: var(--hyp2) solid rgba(255, 160, 60, 0.5);
   border-right: var(--bW) solid transparent;
   border-left: var(--bW) solid transparent;
-  transform: translate3d(-50%, -50%, var(--raise)) rotate(180deg) translate(calc(-0.5*var(--true_w)), calc(-1*calc(var(--sign2)*calc(0.5*var(--bL2))))) rotateX(calc(-90deg + var(--phi2)));
+  border-top: none;
+  transform: translate3d(-50%, -50%, var(--raise)) rotate(180deg) translate(calc(-0.5*var(--w)), calc(-1*calc(var(--sign)*calc(0.5*var(--bL2))))) rotateX(calc(-90deg + var(--phi2)));
   font: calc(0.6*var(--h))/var(--h) sans-serif; }
 
 .w-s6 {
