--- a/templates/styles.css
+++ b/templates/styles.css
@@ -1,28 +1,80 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
 *{box-sizing: border-box;}
 
 /*flex layout properties */
 body {display:flex;flex-flow:column nowrap;justify-content:center;align-items:stretch;}
 
-header {flex:0 1 1rem;}
+header {flex:0 1 1rem; background-color: AliceBlue;}
 
-main {flex:1 1 90vw;}
+main {flex:1 1 90vw; background-color: AliceBlue;}
 
-footer {flex: 0 1 ;}
+footer {flex: 0 1 ; background-color: AliceBlue;}
+
+h1 {color: white;}
 
 /* visual properties */
-body {margin:0;text-align:center;height:100vh;width:100vw;overflow:hidden;}
+body {margin:0;text-align:center;height:100vh;width:100vw;overflow:hidden; background-color: AliceBlue;}
 
-header {font-size:2rem;position:relative;}
+header {font-size:2rem;font-family: 'Chewy'; font-color: 'white'; position:relative;}
 
 	.highlight-white {background-color: white;padding: 0 1vw;}
 
 	.line-bg:before {content:'';position:absolute;top: 50%;left:0;height:1px;width:100%;display:block;background-color: rgba(0,0,0,.2);z-index: -1;}
 
-main {z-index:0;border-radius:10vh;margin:2vmin;font-family: 'Nunito';position:relative;/*background: rgba(0,0,0,.5);*/pointer-events: none;}
 
-	.corner-border {height:10vh;}
+main {z-index:0;border-radius:10vh;margin:2vmin;font-family: 'Chewy';  position:relative;/*background: rgba(0,0,0,.5);*/pointer-events: none;}
 
-	#left-top {position:absolute;left:0;top:0;}
+	.corner-border {height:10vh; }
+
+	#left-top {position:absolute;left:0;top:0; }
 
 	#right-top {position:absolute;right:0;top:0;}
 
@@ -32,7 +84,7 @@ main {z-index:0;border-radius:10vh;margin:2vmin;font-family: 'Nunito';position:r
 
 	#grid {position:absolute;left:0;top:0;width:100%;height:100%;z-index:2;overflow:visible;clip-path:inset(0 round 10vh);}
 
-	#map-container {position:absolute;left:0;top:0;width:100%;height:100%;pointer-events:initial;overflow:scroll;clip-path:inset(0 round 10vh);}
+	#map-container {position:absolute;left:0;top:0;width:100%;height:100%;pointer-events:initial;overflow:scroll;clip-path:inset(0 round 10vh); background-color: AliceBlue}
 
 	#map-container::-webkit-scrollbar{display:none;}
 
@@ -48,7 +100,7 @@ main {z-index:0;border-radius:10vh;margin:2vmin;font-family: 'Nunito';position:r
 
 	#ct {overflow:visible;}
 
-	.layer {will-change:transform;transform:translate3d(0,0,0);}
+	.layer {will-change:transform;transform:translate3d(0,0,0); background-color: AliceBlue}
 
 	#map, #furniture {position:absolute;left:0;top:0;box-sizing: content-box;padding: 50px;transform-origin:0 0;transform:scale(1); transition: all .7s ease; pointer-events: auto; touch-action: pan-x pan-y pinch-zoom;}
 
@@ -58,22 +110,22 @@ footer {}
 
 	/* "How it works" */
 	/* Positioning this is ugly, but it works... */
-	.info {font-size: 1.2rem;font-family: 'Nunito';position:relative;line-height:1.2rem;display:inline-block;}
+	.info {font-size: 1.2rem;font-family: 'Chewy';position:relative;line-height:1.2rem;display:inline-block;}
 
 	.info:before {content:'?';border-radius:100%;border:1px solid rgba(0,0,0,.2);line-height:1.2rem;display:inline-block;width:1.2rem;height:1.2rem;transform:translate(-25%,-10%);margin-top: 0.5rem;}
 
 	hr {height:1px;border:none;background-color:rgba(0,0,0,.2);margin-top: 0;}
 
-	ul {list-style-type:none;margin:0;padding:0 1rem;font-size:1.2rem;font-family:'Lora';font-style:italic;text-align:left;}
+	ul {list-style-type:none;margin:0;padding:0 1rem;font-size:1.2rem;font-family:'Chewy', 'cursive';font-style:italic;text-align:left;}
 
 	li {min-height:2.5rem;max-height:5rem;line-height:2.5rem;width:100%;display:flex;flex-wrap:nowrap;justify-content:flex-start;align-items:baseline;}
 
 	li:before {content:'- ';padding: 0 5%;color:rgba(0,0,0,.5);}
 
-	.current:before {content:'→ ';color:blue;}
+	.current:before {content:'→ ';color:black;}
 
 	li > span {position:relative;flex: 0 1 content;}
-	.underlined:before {content:'';position:absolute;left:0;bottom:0.417rem;width:50%;height:1px;display:inline-block;background-color: black;animation:underline 1s 1s 1 linear both;transform-origin: 0 0;}
+	.underlined:before {content:'';position:absolute;left:0;bottom:0.417rem;width:50%;height:1px;display:inline-block;animation:underline 1s 1s 1 linear both;transform-origin: 0 0;}
 
 	@keyframes underline {
 		0% {opacity:1;transform:translate(0%,0) scale(0,1);}
